--- a/musik/pubspec.yaml
+++ b/musik/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   video_player: ^2.4.2
   lottie: ^1.3.0
 
+  table_calendar: ^3.0.6        # 캘린더 구현
+  intl: ^0.17.0                 # 캘린더 한글설정
+  shared_preferences: ^2.0.15		# key값 data 저장
+  get: ^4.6.5						        # 상태관리
+  google_sign_in: ^5.3.3      	# 구글 로그인 API
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
