--- a/musik/pubspec.yaml
+++ b/musik/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  animated_splash_screen: ^1.2.0
   video_player: ^2.4.2
   lottie: ^1.3.0
 
