--- a/musik/pubspec.yaml
+++ b/musik/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   google_sign_in: ^5.3.3      	# 구글 로그인 API
   pie_chart: ^5.3.2             # pie chart 구현
 
+  firebase_auth: ^3.6.2         # 유저 등록, 로그인 인증
+  firebase_core: ^1.20.0
+  
+
 
   
 dev_dependencies:
