--- a/musik/pubspec.yaml
+++ b/musik/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   pie_chart: ^5.3.2             # pie chart 구현
 
   youtube_player_flutter: ^8.1.0 # youtube link
+  chewie: ^1.3.4
   
 dev_dependencies:
   flutter_test:
