--- a/musik/pubspec.yaml
+++ b/musik/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_auth: ^3.6.2         # 유저 등록, 로그인 인증
   firebase_core: ^1.20.0
   
+  youtube_player_flutter: ^8.1.0 # youtube link
 
 
   
