--- a/musik/pubspec.yaml
+++ b/musik/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  video_player:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -36,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   animated_splash_screen: ^1.2.0
-  video_player: ^2.4.2
+  # video_player: ^2.4.2
   lottie: ^1.3.0
 
 
@@ -47,7 +48,7 @@ dependencies:
   google_sign_in: ^5.3.3      	# 구글 로그인 API
   pie_chart: ^5.3.2             # pie chart 구현
 
-  youtube_player_flutter: ^8.1.0 # youtube link
+  # video_player: ^2.4.6 # youtube link
   
 dev_dependencies:
   flutter_test:
