--- a/musik/pubspec.yaml
+++ b/musik/pubspec.yaml
@@ -29,7 +29,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  video_player:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   animated_splash_screen: ^1.2.0
-  # video_player: ^2.4.2
+  video_player: ^2.4.2
   lottie: ^1.3.0
 
 
